{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 21,
  "lineage": "f91e302d-e0a0-d770-eb85-504b01d2afc2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0533f2ba8a1995cf9",
            "arn": "arn:aws:ec2:us-east-1:075180584955:instance/i-03a0063812e3a67ab",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03a0063812e3a67ab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MyKeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-048ef3fd4e47f8393",
            "private_dns": "ip-10-0-1-171.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.171",
            "public_ip": "3.92.243.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-035731d1ff339a1e5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f5b509af3d2f13c5",
            "tags": {
              "Build-By": "Terraform",
              "Environment": "Development",
              "Leader": "Urias Sousa",
              "Name": "Creation EC2 instance",
              "Team": "DevOps"
            },
            "tags_all": {
              "Build-By": "Terraform",
              "Environment": "Development",
              "Leader": "Urias Sousa",
              "Name": "Creation EC2 instance",
              "Team": "DevOps"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bdbcc94ece35594c"
            ]
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.us_public_subnet",
            "aws_vpc.us_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "us_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:075180584955:internet-gateway/igw-0d0348ef731d09d3c",
            "id": "igw-0d0348ef731d09d3c",
            "owner_id": "075180584955",
            "tags": {
              "Build-By": "Terraform",
              "Environment": "Development",
              "Leader": "Urias Sousa",
              "Name": "Us Internet Gateway",
              "Team": "DevOps"
            },
            "tags_all": {
              "Build-By": "Terraform",
              "Environment": "Development",
              "Leader": "Urias Sousa",
              "Name": "Us Internet Gateway",
              "Team": "DevOps"
            },
            "vpc_id": "vpc-00a48b1916d9e4e16"
          },
          "dependencies": [
            "aws_vpc.us_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:075180584955:route-table/rtb-0ab35cb4cd539a913",
            "id": "rtb-0ab35cb4cd539a913",
            "owner_id": "075180584955",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d0348ef731d09d3c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Build-By": "Terraform",
              "Environment": "Development",
              "Leader": "Urias Sousa",
              "Name": "Public Route Table",
              "Team": "DevOps"
            },
            "tags_all": {
              "Build-By": "Terraform",
              "Environment": "Development",
              "Leader": "Urias Sousa",
              "Name": "Public Route Table",
              "Team": "DevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a48b1916d9e4e16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.us_ig",
            "aws_vpc.us_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0323381f9a743d7de",
            "route_table_id": "rtb-0ab35cb4cd539a913",
            "subnet_id": "subnet-003d1bf613ef5789e"
          },
          "dependencies": [
            "aws_internet_gateway.us_ig",
            "aws_route_table.public_rt",
            "aws_subnet.us_private_subnet",
            "aws_vpc.us_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:075180584955:security-group/sg-0bdbcc94ece35594c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bdbcc94ece35594c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "HTTP and SSH",
            "name_prefix": "",
            "owner_id": "075180584955",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00a48b1916d9e4e16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.us_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:075180584955:subnet/subnet-003d1bf613ef5789e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003d1bf613ef5789e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "075180584955",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Build-By": "Terraform",
              "Environment": "Development",
              "Leader": "Urias Sousa",
              "Name": "Us Private Subnet",
              "Team": "DevOps"
            },
            "tags_all": {
              "Build-By": "Terraform",
              "Environment": "Development",
              "Leader": "Urias Sousa",
              "Name": "Us Private Subnet",
              "Team": "DevOps"
            },
            "vpc_id": "vpc-00a48b1916d9e4e16"
          },
          "dependencies": [
            "aws_vpc.us_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:075180584955:subnet/subnet-0f5b509af3d2f13c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5b509af3d2f13c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "075180584955",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Build-By": "Terraform",
              "Environment": "Development",
              "Leader": "Urias Sousa",
              "Name": "Us Public Subnet",
              "Team": "DevOps"
            },
            "tags_all": {
              "Build-By": "Terraform",
              "Environment": "Development",
              "Leader": "Urias Sousa",
              "Name": "Us Public Subnet",
              "Team": "DevOps"
            },
            "vpc_id": "vpc-00a48b1916d9e4e16"
          },
          "dependencies": [
            "aws_vpc.us_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "us_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:075180584955:vpc/vpc-00a48b1916d9e4e16",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-078f90b3fb9f08e48",
            "default_route_table_id": "rtb-02a313319a4567cff",
            "default_security_group_id": "sg-086b355501f0748df",
            "dhcp_options_id": "dopt-0432012824a6dc624",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00a48b1916d9e4e16",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02a313319a4567cff",
            "owner_id": "075180584955",
            "tags": {
              "Build-By": "Terraform",
              "Environment": "Development",
              "Leader": "Urias Sousa",
              "Name": "Criacao da US VPC",
              "Team": "DevOps"
            },
            "tags_all": {
              "Build-By": "Terraform",
              "Environment": "Development",
              "Leader": "Urias Sousa",
              "Name": "Criacao da US VPC",
              "Team": "DevOps"
            }
          }
        }
      ]
    }
  ]
}